Prevent scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ code {
 @media only screen and (max-width: 748px) {
 
   body, html {
-    overflow-x: hidden;
+    height: 100%;
+    overflow: hidden;
     margin-left: 4px;
     margin-right: 4px;
     
